[project]
name = "langgraph-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dotenv>=0.9.9",
  "langchain>=0.3.27",
  "langchain-google-genai>=2.1.9",
  "langgraph>=0.6.3",
  "langgraph-checkpoint-sqlite>=2.0.11",
  "streamlit>=1.48.1",
]
